--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,14 @@
 plugins {
-    id 'java'
     id 'org.springframework.boot' version '2.7.14'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+    id 'org.jetbrains.kotlin.jvm' version '1.7.22'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.7.22'
 }
 
 group = 'io.git'
 version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 
-java {
-    sourceCompatibility = '17'
-}
 
 repositories {
     mavenCentral()
@@ -18,6 +17,13 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+}
+
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
 
 tasks.named('test') {
