--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.assertj:assertj-core:3.21.0'
+
+    implementation 'org.apache.kafka:kafka-clients:2.8.1'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 }
 
