--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    // kafka streams
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
@@ -23,6 +24,7 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.21.0'
 
     implementation 'org.apache.kafka:kafka-clients:2.8.1'
+    implementation 'org.apache.kafka:kafka-streams:2.8.1'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 }
 
